# RobotAggregation

./: .gitignore  CMakeLists.txt  README.md  aggregation.argos  aggregation_test.argos  aggregation_test.argos_templ  binary_aggregate.bzz  cma_test.py  evolve_aggregation.py  fitness_from_logs.py  proof.m  proof.mlx  proofs.mlx  requirements.txt  should_be_high_but_is_low  should_be_low_but_is_high  simple_binarysens_test.bzz  test2.argos  test_temp.py  trinary_aggregate.bzz
aggregation/: aggregation.argos  binary_aggregate.bzz
buzz_aggregation_examples/: Makefile  binary_aggregate.argos  binary_aggregate.bzz  fitness_from_logs.py  trinary_aggregate.bzz
cluster_jobs/: beam_angle_analysis.sh  beam_length_analysis.sh  evolve.sh  grid_search.sh  n_classes_analysis.sh
controllers/: CMakeLists.txt
controllers/footbot/: AggregationController.cpp  AggregationController.h  CMakeLists.txt  GenericFootbotController.cpp  GenericFootbotController.h  SegregationController.cpp  SegregationController.h  footbot_binary_controller.cpp  footbot_binary_controller.h  segregation_footbot_controller.cpp  segregation_footbot_controller.h
controllers/footbot_nn/: CMakeLists.txt  footbot_binary_controller.cpp  footbot_binary_controller.h
data/: ant_aggregation.eval  anti_aggregation.eval  beam_angle_analysis.txt  beam_angle_analysis_1524709484.txt  beam_length_analysis.txt  best_100_params.txt  cma_evolve_output_1525489832.txt  cma_evolve_output_1525493198.txt  cma_evolve_output_1525563032.txt  costs_from_grid_search.csv  evolved_segregation.eval  gauci.eval  grid_search_output_1524109428.txt  grid_search_output_1524118339.txt  grid_search_output_1524125149.txt  grid_search_output_1524127191.txt  grid_search_output_1524151824.txt  grid_search_output_1524463124.txt  grid_search_output_1524530721.txt  grid_search_output_1524617603.txt  grid_search_output_1524670454.txt  grid_search_output_1524752927.txt  length_versus_cost.csv  n_classes_analysis_100_total.txt  n_classes_analysis_10_per_class.txt  n_classes_analysis_10_per_class_2.txt  n_classes_analysis_1525047171.txt  n_classes_analysis_1525055611.txt  n_classes_analysis_1525061625.txt  n_classes_analysis_1525100651.txt  three_kin.poses  three_kin_long.poses  two_kin.poses  two_kin_0.05.poses  two_kin_0.5.poses  two_kin_1.poses  two_kin_far.poses
data/centroid_of_centroids/: grid_search_output_1533876729.txt  grid_search_output_1533902598.txt
data/cluster_metric_grid_search/: .gitignore
data/four_class/: generated_files.txt  results.csv
embedding/: CMakeLists.txt  evaluate.cpp  evolve.cpp  main.cpp
experiments/: 40_uniform_0.10_density_with_obstacles.argos  aggregation-trial.argos  aggregation.argos  base.argos  binary-segregation-trial.argos  binary-segregation.argos  generate_argos.py  hard.argos  mpga-trial.argos  mpga.argos  no_clusters_2_class.argos  only_non_kin-viz.argos  only_nonkin.argos  segregation-trial.argos  segregation.argos  three_kin.argos  two_kin.argos
experiments/1_class/: 10_in_clusters.argos  10_in_lines.argos  3_in_clusters.argos  3_in_lines.argos  4_in_clusters.argos  4_in_lines.argos  5_in_clusters.argos  5_in_lines.argos  6_in_clusters.argos  7_in_clusters.argos
experiments/1_class-viz/: 10_in_clusters-viz.argos  10_in_lines-viz.argos  3_in_clusters-viz.argos  4_in_clusters-viz.argos  4_in_lines-viz.argos  5_in_clusters-viz.argos  5_in_lines-viz.argos  aggregation-viz.argos
experiments/2_class/: 10_in_clusters.argos  10_in_lines.argos  3_in_clusters.argos  3_in_lines.argos  4_in_clusters.argos  4_in_lines.argos  5_in_clusters.argos  5_in_lines.argos
experiments/2_class-viz/: 10_in_clusters-viz.argos  10_in_lines-viz.argos  3_in_clusters-viz.argos  3_in_lines-viz.argos  4_in_clusters-viz.argos  4_in_lines-viz.argos  5_in_clusters-viz.argos  5_in_lines-viz.argos
experiments/4_class-viz/: 10_in_clusters-viz.argos  10_in_lines-viz.argos  12_uniform_0.03_density.argos  3_in_clusters-viz.argos  (+23 more)
loop_functions/: CMakeLists.txt  aggregation_loop_functions.cpp  aggregation_loop_functions.h  centroid_of_centroids.cpp  centroid_of_centroids.h  cluster_metric.cpp  cluster_metric.h  convex_hull.cpp  convex_hull.h  gauci_aggregation.cpp  gauci_aggregation.h  gauci_loop_function.cpp  gauci_loop_function.h  gauci_segregation_loop_function.cpp  gauci_segregation_loop_function.h  mpga.cpp  mpga.h  mpga_phototaxis_loop_functions.h  my_loop_function.h  n_class.cpp  n_class.h  n_class_loop_function.cpp  n_class_loop_function.h  segregation_loop_function.cpp  segregation_loop_function.h
loop_functions/mpga_loop_functions/: CMakeLists.txt
python/: analyze_beam_angle.py  analyze_beam_length.py  analyze_grid_search_output.py  analyze_num_classes.py  analyze_num_classes_100_total.py  analyze_num_classes_10_per_class.py  check_guarantees.py  cma_evolve.py  cma_test.py  describe_grid_search_output.py  evaluate_many_argos_files.py  generate_dist_plot.py  grid search.ipynb  grid_search.py  kin_1_proof_viz.py  kin_and_non_kin_1_proof_viz.py  merge_grid_search_output.py  mpl.style  myboxplot.py  plot_robots.py  plot_sensor_length_versus_cost.py  proof_simulator.py  prove_thm4.py  table_results.py
(+366 files in other folders)
